--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -174,8 +174,10 @@ Answer for people asking if they can use it if they have already made modificati
 
 0.4.0:
 
-    * FIX: netcast_config_enable_all option updated that now the output config.xml contains only items which have their netcast icons
+    * FIX: netcast_config_enable_all option updated that now the output config.xml contains only items which have their NetCast icons
+    * FIX: netcast_config_enable_all option can be used now multiple times
     * FIX: ywe libs fixing on 0-sized files now works properly
+    * FIX: using NTFS for ywedata should make ywe work more stable, reliable and a bit better performance than using ywedata EXT3 fs image on FAT fs
     * ADD: static list of kernel modules loading support from /lib/modules, /home/modules, /mnt/user/modules
     * ADD: kernel modules included in /lib/modules: cifs.ko, evdev.ko, fuse.ko, hid.ko, input-core.ko, usbhid.ko
     * ADD: keyboard (only partial yet) and mouse support in built-in web browser - WebUI switchable option, not enabled by default
@@ -183,6 +185,8 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: editable 25 bookmarks feature to Internet Browser WebUI option (work by nicola_12345)
     * ADD: support for reset OpenLGTV_BCM settings back to default - if OpenLGTV_BCM/reset_config file exists on USB storage device then move /mnt/user/* to OpenLGTV_BCM/config_backup/ and reboot (idea from LGMOD by lprot)
     * ADD: boot scripts execution time measurement
+    * ADD: NTFS partitions are now remounted with read/write support at boot
+    * ADD: support for OpenLGTV_BCM on NTFS formated USB storage devices
     * UPDATE: haserl updated to 0.9.29
     * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
     * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
