--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -191,6 +191,7 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: ipla.tv alternative player - Polish VOD service
     * ADD: tvp.pl alternative player - Polish VOD service
     * ADD: upgrade from zip file on USB storage device is now supported - just put OpenLGTV_BCM-v*.zip file into OpenLGTV_BCM/upgrade/ dir and boot with device plugged in
+    * ADD: OpenLGTV BCM upgrade from zip file and LG firmware upgrade from epk file upload via WebUI support
     * ADD: ywe.tar.gz file support as Yahoo Widgets Engine - when this file exist in OpenLGTV_BCM dir on USB storage device it gets unpacked before ywe setup
     * ADD: red button in Internet Browser binded to NetCast web-based links page
     * UPDATE: haserl updated to 0.9.29
