--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -191,11 +191,12 @@ Answer for people asking if they can use it if they have already made modificati
     * ADD: ipla.tv alternative player - Polish VOD service
     * ADD: tvp.pl alternative player - Polish VOD service
     * ADD: upgrade from zip file on USB storage device is now supported - just put OpenLGTV_BCM-v*.zip file into OpenLGTV_BCM/upgrade/ dir and boot with device plugged in
-    * ADD: OpenLGTV BCM upgrade from zip file and LG firmware upgrade from epk file upload via WebUI support (the file is being uploaded to proper dirs of USB storage device)    * UPDATE: haserl updated to 0.9.29
+    * ADD: OpenLGTV BCM upgrade from zip file and LG firmware upgrade from epk file upload via WebUI support (the file is being uploaded to proper dirs of USB storage device)
     * ADD: ywe.tar.gz file support as Yahoo Widgets Engine - when this file exist in OpenLGTV_BCM dir on USB storage device it gets unpacked before ywe setup
     * ADD: red button in Internet Browser binded to NetCast web-based links page
     * ADD: now there's on upgrade install.sh script used that's provided with upgrade (if exist), not the one that's already in running firmware
     * ADD: NetPlayer alternative via cgi script
+    * UPDATE: haserl updated to 0.9.29
     * CHANGE: sstripped binaries for reduce image size (only busybox and uClibc libs left, yet)
     * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
     * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
