OpenLGTV BCM: fix for upgrade from zip file, ywe first time configuration, abc.net.au link
git-svn-id: http://svn.openlgtv.org.ru@479 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -221,4 +221,7 @@ Answer for people asking if they can use it if they have already made modificati
 
 0.5.0:
     * FIX: workaround for network shares invisible dirs (thanks xren)
+    * FIX: upgrade from zip file on USB storage device
+    * FIX: ywe first time configuration
+    * FIX: abc.net.au link fix
     * ADD: experimental support for SmartTV models
