--- a/lgmod/changelog.txt
+++ b/lgmod/changelog.txt
@@ -1,3 +1,8 @@
+Changelog 1.6.10 :
+==================
+* Devicom DM9601 new devices support added (see wiki)
+* LG_DTV folder listing in WebUI->Tools tab
+
 Changelog 1.6.9 :
 =================
 * Pegasus.ko - added fake IDs (0x835a, 0x7765),(0x835c, 0x7765),(0x835e, 0x7765) for Gile USB LAN Card UN-001 (Infineon ADM8515 chip)
