--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -1,5 +1,89 @@
 mmm4m5m & openlgtv community present: 
-LGMOD v1.0.01 for LG TVs on Saturn 7 chipset
+LGMOD v1.0.01 for LG TVs on Saturn 7 chipset (was tested on LG 32LD465-ZA with fw 03.03.11)
+	
+	By default, lgmod is disabled. To enable it:
+		cd /mnt/lg/user && mkdir -p lgmod/init && touch lgmod/init/lgmod
+	To disable it: rm /mnt/lg/user/lgmod/init/lgmod
+
+Steps:
+	Prepare:
+		Check wiki: How to backup TV firmware
+			http://openlgtv.org.ru/wiki/index.php/How_to_backup_TV_firmware
+		Check wiki: Partition Editing
+			http://openlgtv.org.ru/wiki/index.php/Partition_Editing
+		Check wiki: Debug mode connection
+			http://openlgtv.org.ru/wiki/index.php/Debug_mode_connection
+
+	Required!
+		Make a backup!
+		Verify your backup!
+		Double check the number of your partitions!
+			(especially if it is not EU firmware!!!)
+			rootfs must be number 3; lginit must be number 4
+
+	Install
+		Enter debug mode
+		Press F10 for debug prompt
+		Start 'sh'
+			$ call debug_os_shell+0xb0
+		Erase rootfs
+			# flash_eraseall /dev/mtd3
+		Write rootfs
+			# cat /mnt/usb1/Drive1/lgmod_S7_#####.sqfs > /dev/mtd3
+		Erase lginit
+			# flash_eraseall /dev/mtd4
+		Write lginit
+			# cat /mnt/usb1/Drive1/mtd4_lginit.sqfs > /dev/mtd4
+
+
+Features:
+	lgmod for S7 - as it is (all features)
+		upload dir is /dev/shm/upload, limit 22M
+		you can do /etc/init.d/lgmod start|stop
+
+	/dev/shm is tmpfs (33MB)
+		directory skeleton from: /mnt/lg/user/lgmod/init/devshm/
+
+
+
+Advanced (just skip and ignore everything below):
+	startup/config options: check /etc/init.d/rcS
+		mount /dev/ as tmpfs
+		use lginit or "lginit as sh script"
+		do not start RELEASE (lgmod)
+		do not start lgmod
+	custom early init scripts: /mnt/lgmod/lginit.example
+
+Changes:
+	dev.tar.gz - from LG as is (mtd55 was missing there)
+	dev-lgmod.tar.gz - pty.ko (lgmod telnetd), /dev/shm and more
+		(just in case: chmod -R g+w,o+w /dev)
+
+	/etc/init.d/*
+	/etc/fstab - LG fstab content is also there
+	/etc/inittab
+	/etc/mtab
+
+	/etc/auth.sh
+	/etc/lgmod.sh
+	/etc/udhcpc-default.script
+
+	/lib/modules/ (pty.ko and mini_fo.ko from rtokarev)
+
+	/mnt/lgmod/
+
+More notes:
+	LG files in /etc/rc.d are not used (rc.sysinit and rc.local)
+	LG binaries and links are not touched, not removed
+		example: /bin/kill (14K) /bin/ps (81K), /bin/watch (144K)
+			All LG binaries instead of busybox links
+		example: /bin/udhcpc (50K), /bin/top (200K), and more...
+			busybox links are in /sbin, /usr/bin/, /usr/sbin
+	Mostly, all files are preserved - as it is in LG firmware
+		(files ownership is not preserved, anyway LG passwd file is invalid)
+
+
+
 It contains all LGMOD v1.6.10 features with the following differences:
 		upload dir is /dev/shm/upload, limit 22M (tools.cgi is modified)
 		you can: /etc/init.d/lgmod start|stop
